implement admin and public controllers; add user creation and retrieval endpoints; configure Spring Security

--- a/journalBuddy/src/main/resources/application.properties
+++ b/journalBuddy/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=journalBuddy
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
+spring.data.mongodb.uri=mongodb+srv://votingsystem:zpC3Y8bB6ZOP9Z00@arkadev.prmhb.mongodb.net/?retryWrites=true&w=majority&appName=arkadev
 spring.data.mongodb.database=journalDB
 spring.data.mongodb.auto-index-creation=true
+spring.security.user.name=user
+spring.security.user.password=0000
 
