implement admin and public controllers; add user creation and retrieval endpoints; configure Spring Security

--- a/journalBuddy/src/main/resources/application.properties
+++ b/journalBuddy/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=journalBuddy
-spring.data.mongodb.uri=mongodb+srv://votingsystem:zpC3Y8bB6ZOP9Z00@arkadev.prmhb.mongodb.net/?retryWrites=true&w=majority&appName=arkadev
-spring.data.mongodb.database=journalDB
+spring.data.mongodb.uri=${MONGO_URI}
+spring.data.mongodb.database=${MONGO_DB}
 spring.data.mongodb.auto-index-creation=true
-spring.security.user.name=user
-spring.security.user.password=0000
 
+spring.security.user.name=${APP_USER}
+spring.security.user.password=${APP_PASS}
