--- a/journalBuddy/src/main/resources/application.properties
+++ b/journalBuddy/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.application.name=journalBuddy
-spring.data.mongodb.uri=${MONGO_URI}
-spring.data.mongodb.database=${MONGO_DB}
-spring.data.mongodb.auto-index-creation=true
-
-spring.security.user.name=${APP_USER}
-spring.security.user.password=${APP_PASS}
+#spring.application.name=journalBuddy
+#spring.data.mongodb.uri=${MONGO_URI}
+#spring.data.mongodb.database=${MONGO_DB}
+#spring.data.mongodb.auto-index-creation=true
+#
+#spring.security.user.name=${APP_USER}
+#spring.security.user.password=${APP_PASS}
